tests/sksl/errors/ReservedNameSizeof.glsl
### Compilation failed:

error: 1: name 'sizeof' is reserved
int sizeof;
    ^^^^^^
1 error
